Updated repository test