@@ -149,7 +149,7 @@ final class BybitTaLinearRepositoryTest {
         final var data = MockData.get(MockData.Source.BYBIT_TA_LINEAR, MockData.Type.PUBLIC_TRADE);
         final var expected = getRowsCount(data);
         assertEquals(expected, repository.savePublicTrade(List.of(data), 700L));
-        final var t = ((Map<?, ?>) ((List<?>) data.get(DATA)).get(0)).get(T);
+        final var t = ((Map<?, ?>) ((List<?>) data.get(DATA)).getFirst()).get(T);
         final var from = OffsetDateTime.ofInstant(Instant.ofEpochMilli((Long) t), ZoneOffset.UTC);
         assertEquals(expected, repository.getPublicTrade(from, from).size());
     }
@@ -194,7 +194,7 @@ final class BybitTaLinearRepositoryTest {
     void shouldGetAllLiquidation() throws Exception {
         final var data = MockData.get(MockData.Source.BYBIT_TA_LINEAR, MockData.Type.ALL_LIQUIDATION);
         assertEquals(1, repository.saveAllLiquidation(List.of(data), 1200L));
-        final var t = ((Map<?, ?>) ((List<?>) data.get(DATA)).get(0)).get(T);
+        final var t = ((Map<?, ?>) ((List<?>) data.get(DATA)).getFirst()).get(T);
         final var from = OffsetDateTime.ofInstant(Instant.ofEpochMilli((Long) t), ZoneOffset.UTC);
         assertEquals(1, repository.getAllLiquidation(from, from).size());
     }
